--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name":"Abamela-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abamelaagency.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
